--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: field_suggestion
 description: FieldSuggestion help us to make beautiful type ahead fields. By listening values of given TextEditingController and checking if the given value is in the given suggestion list or not. 
 version: 0.1.0
-author:
 homepage: https://github.com/theiskaa/field_suggestion
+issue_tracker: https://github.com/theiskaa/field_suggestion/issues
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
