--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: field_suggestion
-description: FieldSuggestion help us to make beautiful type ahead fields. By listening values of given TextEditingController and checking if the given value is in the given suggestion list or not. 
+description: This package helps to make beautiful type ahead fields. It listens values of given TextEditingController and checks if the given value is in the given suggestion list or not. 
 version: 0.1.0
 homepage: https://github.com/theiskaa/field_suggestion
 issue_tracker: https://github.com/theiskaa/field_suggestion/issues
