--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,4 +1,4 @@
-name: tests
+name: coverage
 
 # This workflow is triggered on pull requests and pushes to the repository.
 on:
@@ -8,8 +8,8 @@ on:
     branches: [beta, develop, master]
 
 jobs:
-  test:
-    name: Test the application
+  coverage:
+    name: Upload code coverage to Codecov
 
     # This job will run on Ubuntu virtual machine.
     runs-on: ubuntu-20.04
@@ -20,10 +20,14 @@ jobs:
       # Setup the Flutter environment.
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable" # "alpha", "beta", "dev", default to: "stable"
-          #
-          # # You can also specify exact version of Flutter.
-          flutter-version: "2.0.1"
+          channel: "stable"
+          flutter-version: "2.2.0"
 
       - name: Test the application
-        run: flutter test
+        run: flutter test --coverage
+
+      - name: Code Coverage
+        uses: codecov/codecov-action@v1.2.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage/lcov.info
