--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: field_suggestion
 description: Create highly customizable, simple, and controllable autocomplete fields.
-version: 0.1.2
+version: 0.1.3
 homepage: https://github.com/theiskaa/field_suggestion
 issue_tracker: https://github.com/theiskaa/field_suggestion/issues
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
