--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: field_suggestion
 description: Create highly customizable, simple, and controllable autocomplete fields.
-version: 0.2.0
+version: 0.2.1
 homepage: https://github.com/theiskaa/field_suggestion
 issue_tracker: https://github.com/theiskaa/field_suggestion/issues
+documentation: https://github.com/theiskaa/field_suggestion/wiki
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -11,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  highlightable:
+  highlightable: ^1.0.2
 
 dev_dependencies:
   flutter_test:
