feature: clean-up structure
- Removed errors file.
- Modified utilities (not refactored fully).
- Modified example app for testing re-structured widget.
- Cleaned up field suggestion widget.
    • Removed useless fields
    • Added new fields appropriate to new structure.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,13 @@
 .pub/
 build/
 coverage/
+example/ios/
+example/android/
+example/macos/
+example/README.md
+example/pubspec.lock
+example/pubspec.yaml
+example/analysis_options.yaml
 
 # Android related
 **/android/**/gradle-wrapper.jar
